# blessing-dapp-sol

./: .gitignore  README.md  package.json
.github/workflows/: main.yml
sol-program/: Anchor.toml  package.json
sol-program/assets/: cbnft_meta.json
sol-program/programs/sol-program/: Cargo.toml
sol-program/programs/sol-program/src/: errors.rs  lib.rs
sol-program/programs/sol-program/src/instructions/: add_blessing.rs  claim_blessing.rs  mint_nft.rs  mod.rs  op_admin_param.rs  revoke_blessing.rs  send_blessing.rs  update_blessing.rs
sol-program/programs/sol-program/src/state/: admin_param.rs  blessing.rs  claimer_blessing.rs  mod.rs  sender_blessing.rs
sol-program/scripts/: add_blessing.js  before_test.js  claim_blessing.js  createAdminParamKeyPair.js  init_admin_param.js  mint_nft.js  update_admin_param.js  update_blessing.js
sol-program/tests/: blessing.js  sol-program.js
src/@core/components/wallet/: crypto-icons.js  utils.js
src/@core/configs/: utils.js
src/@core/layouts/components/vertical/navigation/: VerticalNavHeader.js
src/@core/utils/: blessing.js
src/layouts/components/vertical/: AppBarContent.js
src/pages/: _app.js  index.js
src/pages/claim/: index.js
src/pages/claimed/: index.js
src/pages/send/: index.js
src/pages/sended/: index.js
src/pages/wallet/: index.js
src/program/: admin_param_keypair.json  idl.json
src/views/cards/: BlessingCard.js  BlessingCard2.js
