[package]
name = "sol-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
sha256 = "1.0.3"
anchor-spl = "0.25.0"
spl-token = "3.2.0"
mpl-token-metadata = {version = "1.3.4", features = ["no-entrypoint"]}